force-app/main/default/objects/PO_Lines__c/PO_Lines__c.object-meta.xml
<CustomObject>
    <label>PO Lines</label>
    <nameField>
        <label>PO Lines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>