force-app/main/default/objects/PO_Lines__c/fields/Buy_from_Vendor_No__c.field-meta.xml
<CustomField>
    <fullName>Buy_from_Vendor_No__c</fullName>
    <label>Buy-from Vendor No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>