force-app/main/default/objects/PO_Lines__c/fields/Description_2__c.field-meta.xml
<CustomField>
    <fullName>Description_2__c</fullName>
    <label>Description 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>