force-app/main/default/objects/PO_Lines__c/fields/Outstanding_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Quantity__c</fullName>
    <label>Outstanding Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>