force-app/main/default/objects/PO_Lines__c/fields/PO_Header__c.field-meta.xml
<CustomField>
    <fullName>PO_Header__c</fullName>
    <label>PO Header</label>
    <referenceTo>PO_Header__c</referenceTo>
    <relationshipLabel>PO Lines</relationshipLabel>
    <relationshipName>PO_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>